# esp32_LC3plus

./: CMakeLists.txt  README.md  esp_lc3plus.c  esp_lc3plus.h
LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/: LC3plus  lc3.h
