set(srsc)
set(includes)

list(APPEND includes
    "."
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/fft"
)

list(APPEND srsc
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/fft/cfft.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/fft/iis_fft.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/fft/iisfft.c"

    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/adjust_global_gain.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/al_fec_fl.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/apply_global_gain.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/ari_codec.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/attack_detector.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/constants.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/cutoff_bandwidth.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/dct4.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/dec_entropy.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/dec_lc3_fl.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/detect_cutoff_warped.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/enc_entropy.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/enc_lc3_fl.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/estimate_global_gain.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/fft.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/imdct.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/lc3.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/ltpf_coder.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/ltpf_decoder.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/mdct_shaping.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/mdct.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/near_nyquist_detector.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/noise_factor.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/noise_filling.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/olpa.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/pc_apply.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/pc_classify.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/pc_main.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/pc_update.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/per_band_energy.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_classify.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_compute_stab_fac.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_damping_scrambling.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_main.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_noise_substitution.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_noise_substitution0.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_f0_refine_first.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_fec_hq.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_hq_ecu.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_lf_peak_analysis.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_rec_frame.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_setf0hz.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_spec_ana.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_subst_spec.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_tba_per_band_gain.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_tba_spect_Xavg.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_tba_trans_dect_gains.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_phecu_trans_burst_ana_sub.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_tdc_tdac.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_tdc.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/plc_update.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/quantize_spec.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/reorder_bitstream.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/resamp12k8.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/residual_coding.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/residual_decoding.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/setup_com_lc3.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/setup_dec_lc3.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/setup_enc_lc3.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/sns_compute_scf.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/sns_interpolate_scf.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/sns_quantize_scf.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/tns_coder.c"
    "LC3plus_ETSI_src_v172062927c2_20210930/src/floating_point/tns_decoder.c"

    "esp_lc3plus.c"
)


idf_component_register(SRCS ${srsc}
                    INCLUDE_DIRS ${includes}
                    )